--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "devDependencies": {
-    "@antfu/eslint-config": "0.43.1",
-    "@unocss/eslint-config": "0.56.5",
-    "eslint-define-config": "1.24.1",
+    "@antfu/eslint-config": "2.1.0",
+    "@unocss/eslint-config": "0.57.7",
+    "eslint": "8.54.0",
+    "eslint-define-config": "2.0.0",
     "eslint-plugin-import": "2.29.0",
-    "eslint": "8.52.0",
-    "prettier": "3.0.3",
-    "typescript": "5.2.2"
+    "prettier": "3.1.0",
+    "typescript": "5.3.2"
   },
   "publishConfig": {
     "access": "public"
