--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "dotenv -- turbo run build",
     "dev": "dotenv -- turbo run dev --parallel",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "lint": "turbo run lint",
+    "lint": "turbo run lint -- --fix",
     "preinstall": "npx only-allow pnpm",
     "prepare": "simple-git-hooks",
     "release": "tsx scripts/release.ts",
