chore: eslint flatten config

--- a/apps/edifier/package.json
+++ b/apps/edifier/package.json
@@ -1,17 +1,17 @@
 {
   "name": "edifier",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.8",
+    "css-preset": "workspace:*",
     "tsconfig": "workspace:*",
-    "css-preset": "workspace:*"
+    "vue": "^3.3.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
