--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -5,8 +5,11 @@
     "dev": "storybook dev -p 6006",
     "build": "storybook build -o '.output'",
     "start": "http-server .output -p 6006 -c-1 -s",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore --ignore-pattern '!.storybook'",
+    "lint": "eslint . --ignore-pattern '!.storybook'",
     "test-storybook": "test-storybook --stories-json"
+  },
+  "dependencies": {
+    "pinia": "2.1.7"
   },
   "devDependencies": {
     "@babel/core": "7.23.2",
@@ -26,19 +29,19 @@
     "@storybook/test-runner": "0.13.0",
     "@storybook/testing-library": "0.2.2",
     "@storybook/ui": "7.0.0-alpha.43",
-    "@storybook/vue3-vite": "7.5.1",
     "@storybook/vue3": "7.5.1",
+    "@storybook/vue3-vite": "7.5.1",
     "@types/node": "18.18.7",
     "babel-loader": "9.1.3",
     "css-preset": "workspace:*",
     "http-server": "14.1.1",
+    "jest": "29.7.0",
     "jest-circus": "29.7.0",
     "jest-environment-node": "29.7.0",
     "jest-runner": "29.7.0",
-    "jest": "29.7.0",
     "pinia-store": "workspace:*",
-    "react-dom": "17.0.2",
     "react": "17.0.2",
+    "react-dom": "17.0.2",
     "remark-gfm": "4.0.0",
     "storybook": "7.5.1",
     "tsconfig": "workspace:*",
@@ -47,8 +50,5 @@
     "vite": "4.5.0",
     "vue": "3.3.7",
     "webpack": "5.89.0"
-  },
-  "dependencies": {
-    "pinia": "2.1.7"
   }
 }
