--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "monorepo-vue-starter",
   "version": "0.0.0",
   "private": true,
+  "packageManager": "pnpm@8.10.0",
+  "engines": {
+    "node": ">=18",
+    "pnpm": ">=7"
+  },
   "scripts": {
     "build": "dotenv -- turbo run build",
     "dev": "dotenv -- turbo run dev --parallel",
@@ -24,9 +29,11 @@
     "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^2.1.0",
     "@types/prompts": "2.4.7",
     "@types/semver": "7.5.4",
     "dotenv-cli": "7.3.0",
+    "eslint": "^8.54.0",
     "eslint-config-custom": "link:packages/eslint-config-custom",
     "execa": "8.0.1",
     "picocolors": "1.0.0",
@@ -38,15 +45,6 @@
     "turbo": "1.10.16",
     "typescript": "5.2.2"
   },
-  "engines": {
-    "node": ">=18",
-    "pnpm": ">=7"
-  },
-  "simple-git-hooks": {
-    "pre-push": "pnpm lint",
-    "commit-msg": "pnpm exec tsx scripts/verifyCommit.ts $1"
-  },
-  "packageManager": "pnpm@8.10.0",
   "pnpm": {
     "peerDependencyRules": {
       "ignoreMissing": [
@@ -56,5 +54,9 @@
         "vite": "3"
       }
     }
+  },
+  "simple-git-hooks": {
+    "pre-push": "pnpm lint",
+    "commit-msg": "pnpm exec tsx scripts/verifyCommit.ts $1"
   }
 }
