--- a/apps/edifier/package.json
+++ b/apps/edifier/package.json
@@ -1,6 +1,5 @@
 {
   "name": "edifier",
-  "type": "module",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -15,8 +14,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.0",
+    "jscodeshift": "^0.15.2",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0",
+    "vite": "^5.0.2",
     "vue-tsc": "^1.8.22"
   }
 }
